--- a/app/src/main/res/layout/product_detail_home.xml
+++ b/app/src/main/res/layout/product_detail_home.xml
@@ -1,30 +1,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarGrid"
         android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
-        app:titleTextColor="@color/white"
         android:layout_height="?attr/actionBarSize"
-        app:theme="@style/ToolbarColoredBackArrow"
+        android:background="@color/colorPrimary"
         app:contentInsetLeft="0dp"
         app:contentInsetStart="0dp"
         app:contentInsetStartWithNavigation="0dp"
-        app:navigationIcon="?attr/homeAsUpIndicator" />
+        app:navigationIcon="?attr/homeAsUpIndicator"
+        app:theme="@style/ToolbarColoredBackArrow"
+        app:titleTextColor="@color/white" />
 
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/toolbarGrid"
-        android:layout_above="@+id/footerGrid" >
-
-
+        android:layout_above="@+id/footerGrid"
+        android:layout_below="@+id/toolbarGrid">
 
 
         <RelativeLayout
@@ -34,89 +33,109 @@
             />
 
 
-
             <LinearLayout
                 android:id="@+id/prd_layoutGrid"
                 android:layout_width="match_parent"
-                android:gravity="center"
-                android:background="@drawable/shadow"
+                android:layout_height="280dp"
                 android:layout_marginBottom="8dp"
-                android:layout_height="match_parent">
+                android:background="@drawable/shadow"
+                android:gravity="center">
 
-                <ImageView
-                    android:id="@+id/prd_imgGrid"
-                    android:layout_width="match_parent"
-                    android:layout_height="280dp"
-                    android:padding="8dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    card_view:cardElevation="5dp">
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:id="@+id/prd_imgGrid"
+                            android:layout_width="match_parent"
+                            android:layout_height="280dp"
+                            android:adjustViewBounds="true"
+                            android:padding="8dp"
+                            android:scaleType="centerCrop" />
+
+                        <ImageButton
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_gravity="top|right"
+                            android:src="@drawable/settings"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginTop="10dp"/>
+                    </FrameLayout>
+                </android.support.v7.widget.CardView>
+
+
             </LinearLayout>
 
 
             <LinearLayout
                 android:id="@+id/price_layoutGrid"
                 android:layout_width="match_parent"
-                android:layout_marginBottom="8dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/prd_layoutGrid"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/shadow"
                 android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:layout_height="wrap_content">
+                android:paddingRight="8dp">
 
                 <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="left"
                     android:orientation="vertical"
                     android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:gravity="left">
+                    android:paddingBottom="10dp">
 
 
                     <TextView
                         android:id="@+id/titleGrid"
-                        android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        android:textColor="@color/blackshadow"
-                        android:text="title"
-                        android:paddingBottom="5dp"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto_bold"
                         android:gravity="left"
-                        android:textSize="24sp"
-                        android:fontFamily="@font/roboto_bold"/>
+                        android:paddingBottom="5dp"
+                        android:text="title"
+                        android:textColor="@color/blackshadow"
+                        android:textSize="24sp" />
 
 
                     <RelativeLayout
                         android:id="@+id/price_viewGrid"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
-                        android:orientation="horizontal"
-                        android:gravity="center|left">
+                        android:gravity="center|left"
+                        android:orientation="horizontal">
 
 
                         <TextView
                             android:id="@+id/original_priceGrid"
-                            android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
-                            android:textColor="@color/blackshadow"
-                            android:text="₹ 100"
-                            android:gravity="center"
+                            android:layout_height="wrap_content"
                             android:layout_alignParentLeft="true"
                             android:layout_marginRight="10dp"
-                            android:textSize="13sp"
-                            android:fontFamily="@font/roboto_medium"/>
+                            android:fontFamily="@font/roboto_medium"
+                            android:gravity="center"
+                            android:text="₹ 100"
+                            android:textColor="@color/blackshadow"
+                            android:textSize="13sp" />
 
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/blackshadow"
-                            android:text="₹ 500"
-                            android:background="@drawable/strike_through"
-                            android:gravity="center"
                             android:layout_toRightOf="@id/original_priceGrid"
-                            android:textSize="13sp"
-                            android:fontFamily="@font/roboto_medium"/>
-
+                            android:background="@drawable/strike_through"
+                            android:fontFamily="@font/roboto_medium"
+                            android:gravity="center"
+                            android:text="₹ 500"
+                            android:textColor="@color/blackshadow"
+                            android:textSize="13sp" />
 
 
                     </RelativeLayout>
@@ -124,19 +143,18 @@
                     <LinearLayout
                         android:id="@+id/share_layotGrid"
                         android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_below="@+id/price_viewGrid"
-                        android:background="@drawable/bodertop"
-                        android:layout_height="match_parent">
+                        android:background="@drawable/bodertop">
 
                         <Button
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:background="@color/white"
-                            android:textColor="@color/black"
-                            android:text="Share"
                             android:fontFamily="@font/roboto_medium"
-                            />
+                            android:text="Share"
+                            android:textColor="@color/black" />
 
                     </LinearLayout>
 
@@ -150,36 +168,34 @@
             <LinearLayout
                 android:id="@+id/detil_layourGrid"
                 android:layout_width="match_parent"
-                android:layout_below="@+id/qnt_layoutGrid"
-                android:background="@drawable/shadow"
-                android:layout_marginBottom="8dp"
                 android:layout_height="wrap_content"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
+                android:layout_below="@+id/qnt_layoutGrid"
+                android:layout_marginBottom="8dp"
+                android:background="@drawable/shadow"
                 android:gravity="center_vertical|center_horizontal"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
 
 
                 <TextView
+                    android:id="@+id/qntyGrid"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
-                    android:textColor="@color/grey"
-                    android:text="Quantity"
-                    android:textSize="15dp"
-                    android:gravity="center|left"
                     android:layout_weight="1"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:id="@+id/qntyGrid"
                     android:fontFamily="@font/roboto_medium"
-                    />
-
+                    android:gravity="center|left"
+                    android:text="Quantity"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/grey"
+                    android:textSize="15dp" />
 
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
-                    android:gravity="center|right"
                     android:layout_weight="1"
+                    android:gravity="center|right"
                     android:orientation="horizontal">
 
                     <Button
@@ -187,29 +203,29 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:background="@color/whiteshadow"
-                        android:textColor="@color/colorPrimary"
+                        android:fontFamily="@font/roboto_bold"
                         android:text="-"
-                        android:fontFamily="@font/roboto_bold"/>
+                        android:textColor="@color/colorPrimary" />
 
                     <TextView
                         android:id="@+id/integer_numberGrid"
                         android:layout_width="35dp"
                         android:layout_height="30dp"
+                        android:fontFamily="@font/roboto_medium"
                         android:gravity="center"
-                        android:textColor="@color/colorPrimary"
                         android:text="0"
-                        android:textSize="13sp"
-                        android:fontFamily="@font/roboto_medium"/>
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="13sp" />
 
                     <Button
                         android:id="@+id/increaseGrid"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:background="@color/whiteshadow"
-                        android:textColor="@color/colorPrimary"
+                        android:fontFamily="@font/roboto_bold"
                         android:onClick="increaseInteger"
                         android:text="+"
-                        android:fontFamily="@font/roboto_bold"/>
+                        android:textColor="@color/colorPrimary" />
                 </LinearLayout>
 
 
@@ -219,90 +235,78 @@
             <LinearLayout
                 android:id="@+id/qnt_layoutGrid"
                 android:layout_width="match_parent"
-                android:layout_marginBottom="8dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/price_layoutGrid"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/shadow"
                 android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:layout_height="wrap_content">
+                android:paddingRight="8dp">
 
                 <RelativeLayout
+                    android:id="@+id/toggleViewGrid"
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:orientation="horizontal"
-                    android:id="@+id/toggleViewGrid"
-                    android:gravity="center|left">
+                    android:gravity="center|left"
+                    android:orientation="horizontal">
 
 
                     <TextView
                         android:id="@+id/headingTxtGrid"
-                        android:layout_height="60dp"
                         android:layout_width="wrap_content"
-                        android:textColor="@color/blackshadow"
-                        android:text="Chose an option"
-                        android:gravity="center"
+                        android:layout_height="60dp"
                         android:layout_alignParentLeft="true"
-                        android:textSize="13sp"
-                        android:fontFamily="@font/roboto_regular" />
+                        android:fontFamily="@font/roboto_regular"
+                        android:gravity="center"
+                        android:text="Chose an option"
+                        android:textColor="@color/blackshadow"
+                        android:textSize="13sp" />
 
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="60dp"
-                        android:textColor="@color/blackshadow"
-                        android:text="1Kg"
-                        android:gravity="center"
                         android:layout_toLeftOf="@id/toggleIconGrid"
-                        android:textSize="13sp"
-                        android:fontFamily="@font/roboto_medium"/>
+                        android:fontFamily="@font/roboto_medium"
+                        android:gravity="center"
+                        android:text="1Kg"
+                        android:textColor="@color/blackshadow"
+                        android:textSize="13sp" />
 
 
                     <ImageView
+                        android:id="@+id/toggleIconGrid"
                         android:layout_width="wrap_content"
                         android:layout_height="60dp"
                         android:layout_alignParentRight="true"
-                        android:tint="@color/blackshadow"
-                        android:padding="0dp"
-                        android:id="@+id/toggleIconGrid"
                         android:gravity="center|right"
-                        android:src="@drawable/right"/>
+                        android:padding="0dp"
+                        android:src="@drawable/right"
+                        android:tint="@color/blackshadow" />
 
                 </RelativeLayout>
 
             </LinearLayout>
 
 
-
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/relativeGrid"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/detil_layourGrid"
-                android:orientation="vertical"
-                android:paddingRight="5dp"
-                android:paddingLeft="5dp"
                 android:background="@color/white"
-                xmlns:android="http://schemas.android.com/apk/res/android">
-                <com.mindorks.placeholderview.PlaceHolderView
-                    xmlns:android="http://schemas.android.com/apk/res/android"
+                android:orientation="vertical"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
+
+                <com.mindorks.placeholderview.PlaceHolderView xmlns:android="http://schemas.android.com/apk/res/android"
                     android:id="@+id/galleryViewGrid"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:scrollbars="vertical"/>
+                    android:scrollbars="vertical" />
             </LinearLayout>
 
 
-
-
-
-
-
-
-
         </RelativeLayout>
-
 
 
     </ScrollView>
@@ -321,27 +325,25 @@
 
             <Button
                 android:id="@+id/addtoCartGrid"
-                android:onClick="addcart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/white"
-                android:textColor="@color/green"
-                android:text="Add To Cart"
                 android:fontFamily="@font/roboto_medium"
-                />
+                android:onClick="addcart"
+                android:text="Add To Cart"
+                android:textColor="@color/green" />
 
             <Button
                 android:id="@+id/buynowGrid"
-                android:onClick="buynow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/green"
-                android:textColor="@color/white"
-                android:text="Buy Now"
                 android:fontFamily="@font/roboto_medium"
-                />
+                android:onClick="buynow"
+                android:text="Buy Now"
+                android:textColor="@color/white" />
         </LinearLayout>
 
     </RelativeLayout>
