--- a/app/src/main/res/layout/cart_items.xml
+++ b/app/src/main/res/layout/cart_items.xml
@@ -1,215 +1,184 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ord_itMyCart"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/cart_shadow"
+    android:layout_height="150dp"
     android:layout_marginBottom="10dp"
-    android:padding="0dp">
-
-    <LinearLayout android:orientation="horizontal"
-        android:layout_height="fill_parent"
-        android:padding="15dp"
-        android:layout_width="fill_parent">
-
-        <LinearLayout
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_width="0dp">
-
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_height="fill_parent"
-                android:layout_marginBottom="5dp"
-                android:layout_width="wrap_content">
-
-                <TextView
-                    android:id="@+id/prd_name"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:textColor="@color/intercom_black"
-                    android:text="GF IDLY RICE"
-                    android:gravity="center"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginRight="10dp"
-                    android:textSize="17sp"
-                    android:fontFamily="@font/roboto_medium"/>
-
-                </LinearLayout>
-
-
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_height="fill_parent"
-                android:layout_marginBottom="5dp"
-                android:layout_width="wrap_content">
-
-                <TextView
-                    android:id="@+id/re_amnt_lbl"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:textColor="@color/blackshadow"
-                    android:text="Repack Amount"
-                    android:gravity="center"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginRight="10dp"
-                    android:textSize="13sp"
-                    android:fontFamily="@font/roboto_regular"/>
-
-                <TextView
-                    android:id="@+id/re_amnt"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:textColor="@color/intercom_black"
-                    android:text="1KG"
-                    android:gravity="center"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginRight="10dp"
-                    android:textSize="13sp"
-                    android:fontFamily="@font/roboto_regular"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_height="fill_parent"
-                android:layout_width="wrap_content">
-
-                    <TextView
-                        android:id="@+id/price"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:layout_marginBottom="5dp"
-                        android:textColor="@color/blackshadow"
-                        android:text="10"
-                        android:gravity="center"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginRight="10dp"
-                        android:textSize="13sp"
-                        android:fontFamily="@font/roboto_regular"/>
-
-                    <TextView
-                        android:id="@+id/prd_price"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:layout_marginBottom="5dp"
-                        android:textColor="@color/intercom_black"
-                        android:text="10"
-                        android:gravity="center"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginRight="10dp"
-                        android:textSize="13sp"
-                        android:fontFamily="@font/roboto_regular"/>
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_height="wrap_content"
-            android:layout_width="0dp">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_horizontal|center_vertical"
-                android:orientation="vertical">
-
-
-                <com.mikhaellopez.circularimageview.CircularImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    app:civ_border_color="#EEEEEE"
-                    app:civ_border_width="0dp"
-                    app:civ_shadow="false"
-                    app:civ_shadow_radius="10"
-                    app:civ_shadow_color="#8BC34A"/>
-
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/decrease"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:background="@color/whiteshadow"
-                    android:textColor="@color/colorPrimary"
-                    android:text="-"
-                    android:fontFamily="@font/roboto_bold"/>
-
-                <TextView
-                    android:id="@+id/integer_number"
-                    android:layout_width="35dp"
-                    android:layout_height="30dp"
-                    android:gravity="center"
-                    android:textColor="@color/colorPrimary"
-                    android:text="0"
-                    android:textSize="13sp"
-                    android:fontFamily="@font/roboto_medium"/>
-
-                <Button
-                    android:id="@+id/increase"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:background="@color/whiteshadow"
-                    android:textColor="@color/colorPrimary"
-                    android:onClick="increaseInteger"
-                    android:text="+"
-                    android:fontFamily="@font/roboto_bold"/>
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_alignBottom="@+id/image"
-            android:layout_alignLeft="@+id/image"
-            android:layout_alignRight="@+id/image"
-            android:layout_alignTop="@+id/main_image"
-            android:background="#DDDDDD" />
-    </LinearLayout>
-
+    android:background="@drawable/cart_shadow"
+    android:orientation="vertical"
+    android:padding="0dp"
+    android:elevation="5dp">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:padding="15dp">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal|center_vertical"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/itemIconMyCart"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@android:color/holo_orange_dark" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_weight="4"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_marginBottom="5dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/prd_nameMyCart"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="4dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:gravity="left"
+                    android:text="Potato"
+                    android:textAllCaps="false"
+                    android:textColor="@android:color/black"
+                    android:textSize="22dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:layout_marginBottom="5dp">
+
+                <TextView
+                    android:id="@+id/qntyMyCart"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="1Kg"
+                    android:textColor="@color/blackshadow"
+                    android:textSize="18dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_marginBottom="5dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/priceOldMyCart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/strike_through"
+                        android:fontFamily="@font/roboto_regular"
+                        android:text="Rs.80"
+                        android:textColor="@color/blackshadow"
+                        android:textSize="15dp" />
+
+                    <TextView
+                        android:id="@+id/priceNewMyCart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto_bold"
+                        android:text="Rs.50"
+                        android:textColor="@color/light_black"
+                        android:textSize="18dp" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="4">
+
+            <LinearLayout
+                android:id="@+id/lldeletebtn"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:gravity="right">
+
+                <Button
+                    android:id="@+id/btn_deleteMyCart"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/ic_delete_black_24dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="13dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/lldeletebtn"
+                android:gravity="right|bottom"
+                android:orientation="horizontal">
 
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@color/white"
-            android:textColor="@color/black"
-            android:text="Remove"
-            android:fontFamily="@font/roboto_medium"
-            />
+                <ImageButton
+                    android:id="@+id/idMinusICon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_remove_circle_outline_black_24dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="left|bottom"
+                    android:background="@color/zxing_transparent"/>
+                <TextView
+                    android:id="@+id/idProductCount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:text="2"
+                    tools:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:layout_gravity="center|bottom"
+                    android:textAlignment="center"/>
+                <ImageButton
+                    android:id="@+id/idPlusIcon"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_add_circle_outline_black_24dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="right|bottom"
+                    android:background="@color/zxing_transparent"/>
 
+            </LinearLayout>
+        </RelativeLayout>
     </LinearLayout>
-
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
