--- a/app/src/main/res/layout/add_money_to_wallet.xml
+++ b/app/src/main/res/layout/add_money_to_wallet.xml
@@ -97,16 +97,17 @@
                         android:padding="10dp"
                         android:text="@string/Rs" />
 
-                    <TextView
-                        android:id="@+id/tvAmount"
+                    <EditText
+                        android:id="@+id/etAmount"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto_bold"
                         android:gravity="center|left"
                         android:padding="10dp"
-                        android:text="100"
+                        android:hint="000"
                         android:textColor="@color/light_black_1"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:background="@color/zxing_transparent"/>
                 </LinearLayout>
 
                 <LinearLayout
