--- a/app/src/main/res/layout/add_money_to_wallet.xml
+++ b/app/src/main/res/layout/add_money_to_wallet.xml
@@ -134,7 +134,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorAccent"
-                android:fontFamily="@font/roboto_regular"
+                android:fontFamily="@font/roboto_bold"
                 android:text="Proceed"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
