--- a/app/src/main/res/layout/add_money_to_wallet.xml
+++ b/app/src/main/res/layout/add_money_to_wallet.xml
@@ -57,6 +57,7 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/tvWalletBlnc"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
