--- a/app/src/main/res/layout/loyality_points_details.xml
+++ b/app/src/main/res/layout/loyality_points_details.xml
@@ -96,7 +96,7 @@
                     android:orientation="horizontal">
 
                     <EditText
-                        android:id="@+id/tvReedem"
+                        android:id="@+id/etReedem"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto_bold"
